src/objects/AQMEN__c.object
<CustomObject>
    <fields>
        <fullName>LV_Trad_BSX_Share__c</fullName>
        <formula>LVTradBSXUnits__c / LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad BSX % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_BTK_Share__c</fullName>
        <formula>LVTradBTKUnits__c / LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad BTK % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_MDT_Share__c</fullName>
        <formula>LVTradMDTUnits__c / LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad MDT % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_Other_Share__c</fullName>
        <formula>LVTradOtherUnits__c / LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad Other % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_SJM_Share__c</fullName>
        <formula>LVTradSJMUnits__c  /  LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad SJM % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_Sorin_Share__c</fullName>
        <formula>LVTradSorinUnits__c /  LV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad Sorin % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LV_Trad_Total_Units__c</fullName>
        <formula>LVTradBSXUnits__c +
 LVTradBTKUnits__c + 
LVTradMDTUnits__c +
 LVTradOtherUnits__c +
 LVTradSJMUnits__c +
 LVTradSorinUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: LV-Trad Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LV_of_total_implants_that_are_box__c</fullName>
        <label>CRM: LV - % total implants that are box</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lab13DMappingSystem1__c</fullName>
        <label>AF: Lab #1 - 3-D Mapping System 1</label>
        <picklist>
            <picklistValues>
                <fullName>Carto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carto-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab13DMappingSystem2__c</fullName>
        <label>AF: Lab #1 - 3-D Mapping System 2</label>
        <picklist>
            <picklistValues>
                <fullName>Carto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carto 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1ICEsystem__c</fullName>
        <label>AF: Lab #1 - ICE system</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Galaxy (IVUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Vivid i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate-Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Cypress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Sequoia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens X300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1LabhaveSiemensfluorosyst__c</fullName>
        <label>AF: Lab #1 - Have Siemens fluoro sys ?</label>
        <picklist>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens ARTIC VB 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens VC 14 Models</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1MainEPsystem__c</fullName>
        <label>AF: Lab #1 - Main EP system</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1MultipleScreenHDMonitor__c</fullName>
        <label>AF: Lab #1 - Multiple Screen HD Monitor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1RFGenerator__c</fullName>
        <label>AF: Lab #1 - RF Generator</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Ampere</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SJM 1500T Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARD RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX EPT 1000 XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX Maestro 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik AbControl MDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert 70 RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert EP Shuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT Atakr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT GENius Multi-Channel (Ablation Frontiers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka HAT 300 Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1Roboticcathguidancesystem__c</fullName>
        <label>AF:Lab #1 - Robotic cath guidance system</label>
        <picklist>
            <picklistValues>
                <fullName>Hansen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stereotaxis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1SecondaryEPSystem__c</fullName>
        <label>AF: Lab #1 - Secondary EP System</label>
        <picklist>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1Xraysystem__c</fullName>
        <label>AF: Lab #1 - X-ray system</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab1YrofInstallofMainEPSystem__c</fullName>
        <label>AF: Lab #1 - Yr of Install Main EP Sys</label>
        <picklist>
            <picklistValues>
                <fullName>2001.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab23DMappingSystem1__c</fullName>
        <label>AF: Lab #2 - 3-D Mapping System 1</label>
        <picklist>
            <picklistValues>
                <fullName>Carto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carto-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensite Velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2DedicatedEPlaborshared__c</fullName>
        <label>AF: Lab#2 - Dedicated EP lab or shared?</label>
        <picklist>
            <picklistValues>
                <fullName>AF Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF and CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF, CRM and IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2ICEsystem__c</fullName>
        <label>AF: Lab #2 - ICE system</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Galaxy (IVUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Vivid i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate-Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Cypress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Sequoia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens X300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2LabhaveSiemensfluorosyst__c</fullName>
        <label>AF: Lab #2 - Has Siemens fluoro sys?</label>
        <picklist>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens ARTIC VB 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens VC 14 Models</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2MainEPsystem__c</fullName>
        <label>AF: Lab #2 - Main EP system</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2MultipleScreenHDMonitor__c</fullName>
        <label>AF: Lab #2 - Multiple Screen HD Monitor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2RFGenerator__c</fullName>
        <label>AF: Lab #2 - RF Generator</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Ampere</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SJM 1500T Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARD RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX EPT 1000 XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX Maestro 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik AbControl MDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert 70 RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert EP Shuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT Atakr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT GENius Multi-Channel (Ablation Frontiers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka HAT 300 Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2Roboticcathguidancesystem__c</fullName>
        <label>AF: Lab #2 - Robotic cath guidance sys</label>
        <picklist>
            <picklistValues>
                <fullName>Hansen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stereotaxis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2SecondaryEPSystem__c</fullName>
        <label>AF: Lab #2 - Secondary EP System</label>
        <picklist>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2Xraysystem__c</fullName>
        <label>AF: Lab #2 - X-ray system</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab2YrofInstallofMainEPSystem__c</fullName>
        <label>AF: Lab #2 - Yr of Install Main EP Sys</label>
        <picklist>
            <picklistValues>
                <fullName>2001.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3DedicatedEPlaborshared__c</fullName>
        <label>AF: Lab #3 - Dedicated EP lab or shared?</label>
        <picklist>
            <picklistValues>
                <fullName>AF Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF and CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF, CRM and IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3ICEsystem__c</fullName>
        <label>AF: Lab #3 - ICE system</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Galaxy (IVUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Vivid i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM ViewMate-Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Cypress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Sequoia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens X300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3LabhaveSiemensfluorosyst__c</fullName>
        <label>AF: Lab #3 - Has Siemens fluoro sys ?</label>
        <picklist>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens ARTIC VB 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens VC 14 Models</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3MainEPsystem__c</fullName>
        <label>AF: Lab #3 - Main EP system</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3MultipleScreenHDMonitor__c</fullName>
        <label>AF: Lab #3 - Multiple Screen HD Monitor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3RFGenerator__c</fullName>
        <label>AF: Lab #3 - RF Generator</label>
        <picklist>
            <picklistValues>
                <fullName>SJM Ampere</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SJM 1500T Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARD RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX EPT 1000 XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX Maestro 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik AbControl MDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert 70 RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J Stockert EP Shuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT Atakr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT GENius Multi-Channel (Ablation Frontiers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka HAT 300 Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3Roboticcathguidancesystem__c</fullName>
        <label>AF: Lab #3 - Robotic cath guidance sys</label>
        <picklist>
            <picklistValues>
                <fullName>Hansen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stereotaxis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3SecondaryEPSystem__c</fullName>
        <label>AF: Lab #3 - Secondary EP System</label>
        <picklist>
            <picklistValues>
                <fullName>Bard Labsystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Cardiolab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM WorkMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3Xraysystem__c</fullName>
        <label>AF: Lab #3 - X-ray system</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab3YrofInstallofMainEPSystem__c</fullName>
        <label>AF: Lab #3 - Yr Install of Main EP Sys</label>
        <picklist>
            <picklistValues>
                <fullName>2001.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LabDedicatedEPlaborshared__c</fullName>
        <label>AF: Lab #1 - Dedicated EP lab or shared?</label>
        <picklist>
            <picklistValues>
                <fullName>AF Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF and CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF, CRM and IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_1_Irrigation_Pump__c</fullName>
        <label>AF: Lab #1 - Irrigation Pump</label>
        <picklist>
            <picklistValues>
                <fullName>St. Jude Medical Cool Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosense Webster CoolFlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific CircuCool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik Qiona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>